--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:blahblah@unh.edu">email</a></li>
-	        		<li><a href="https://github.com/joannagyory">github.com/joannagyory</a></li>
+	        		<li><a href="mailto:sa1236@wildcats.unh.edu">email</a></li>
+	        		<li><a href="https://github.com/sallyakuffo">github.com/sallyakuffo</a></li>
 				</ul>
 			</footer>
 		</body>
